apps/base/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName prowlarr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: ghcr.io/linuxserver/prowlarr:develop@sha256:e7a05286500b6e51084b0ba263dbbaf825db1ec7b731bf18aea30df84714e5f6
          imagePullPolicy: IfNotPresent
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: prowlarr/config
      hostname: prowlarr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
