apps/base/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
spec:
  selector:
    app: prowlarr-deployment
  ports:
  - name: http
    port: 9696
    targetPort: 9696
    protocol: TCP
