apps/base/media/prowlarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-forward-auth
          namespace: network-system
      services:
        - name: prowlarr-service
          port: 9696
  tls:
    certResolver: letsencrypt
